--- a/base_style.css
+++ b/base_style.css
@@ -4,6 +4,7 @@ body{
   line-height:1.6;
   font-size:18px;
   color:#444;
+  background-color: #EEEEEE;
   padding:0 10px}
 h1,h2,h3{
   line-height:1.2}
